fix: result nowrap

--- a/workstation/src/assets/css/modules/result-modal.scss
+++ b/workstation/src/assets/css/modules/result-modal.scss
@@ -47,7 +47,6 @@
     }
     dd {
       margin-bottom: 20px;
-      white-space: nowrap;
 
       & > img {
         float: right;
